pivot: filter box overlap fix

--- a/web-client/src/main/webapp/static/css/pivot.css
+++ b/web-client/src/main/webapp/static/css/pivot.css
@@ -18,6 +18,11 @@
     width: 100%;
 }
 
+.pvtUiContainer {
+    height: 100%;
+    width: 100%;
+}
+
 .pvtUiCellVDiv {
     height: 100%;
     overflow: hidden auto;
@@ -287,7 +292,7 @@ reproduces in chrome 80, in firefox 73 (latest) and chrome 70 (2018-10-16) width
 }
 
 .pvtFilterBox {
-    z-index: 100; /* todo: temporarily restored, needs investigation. should be drawn behind dialogs (e.g. filter dialog, busy dialog) */
+    cursor: default;
     width: 300px;
     border: 1px solid var(--component-border-color);
     background-color: var(--background-color);
